Decision tree Classification

--- a/Decision Tree Classification/Decisiontress.ipynb
+++ b/Decision Tree Classification/Decisiontress.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Decision Tree Classifier"
+    "# Decision Tree Classifier"
    ]
   },
   {
@@ -203,14 +203,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preprocessing"
+    "#### Preprocessing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Separating x and y"
+    "#### Separating x and y"
    ]
   },
   {
@@ -389,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Label Encode The Target Features"
+    "#### Label Encode The Target Features"
    ]
   },
   {
@@ -512,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Perform pipeline on x Features"
+    "#### Perform pipeline on x Features"
    ]
   },
   {
@@ -678,7 +678,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train Test Split"
+    "#### Train Test Split"
    ]
   },
   {
@@ -695,7 +695,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Built Decision Trees"
+    "#### Built Decision Trees"
    ]
   },
   {
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
        "DecisionTreeClassifier(max_depth=3, min_samples_split=4, random_state=42)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        "1.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
        "0.94"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,12 +933,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize how the tree is built"
+    "#### Visualize how the tree is built"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,12 +988,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evaluate Best Model On Test Data"
+    "#### Evaluate Best Model On Test Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,16 +1004,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b403638340>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x21c19ec3ee0>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
        "       2, 0, 0, 0, 1, 0])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,12 +1062,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Classification report"
+    "#### Classification report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1140,7 @@
        "       'setosa', 'versicolor'], dtype=object)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
        "       'setosa', 'setosa', 'setosa', 'versicolor', 'setosa'], dtype=object)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
